# F1-21_udp_data

./: .gitignore  F1-21UdpData.py  LICENSE  README.md  incomingData.py  pyproject.toml  setup.cfg  test.py
classes/: packet.py  packetHeader.py
classes/packetData/: LapHistoryData.py
packets/: packet.py  packetBody.py  packetHeader.py
packets/packetData/: PackMotionData.py  PacketCarStatusData.py  PacketCarTelemetryData.py  PacketEventData.py  PacketLapData.py  PacketMotionData.py  PacketSessionData.py
packets/packetData/classes/: CarDamageData.py  CarMotionData.py  CarStatusData.py  CarTelemetryData.py  FinalClassificationData.py  LapData.py  LapHistoryData.py  LobbyInfoData.py  MarshalZone.py  ParticipantData.py  TyreStintHistoryData.py  WeatherForecastSample.py
packets/packetData/classes/eventClasses/: DriveThroughPenaltyServed.py  Flashback.py  RaceWinner.py  Retirement.py  StopGoPenaltyServed.py  TeamMateInPits.py
src/F121UdpData/: F1Data.py
src/F121UdpData/packets/packetData/: PacketCarSetupData.py  PacketFinalClassificationData.py  PacketLobbyInfoData.py  PacketParticipantsData.py
src/F121UdpData/packets/packetData/classes/: LobbyInfoData.py  ParticipantData.py  WeatherForecastSample.py
src/F1_21UdpData.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/packets/: packetHeader.py
src/packets/packetData/: PacketCarDamageData.py  PacketLapData.py  PacketParticipantsData.py  PacketSessionHistoryData.py
src/packets/packetData/classes/: CarSetupData.py  CarStatusData.py  FinalClassificationData.py  MarshalZone.py
src/packets/packetData/classes/eventClasses/: SpeedTrap.py
(+4 files in other folders)
